# almagest

./: Cargo.toml  guidelines.txt  minimal_testcase.rs  testcase.rs
assets/materials/: test.mat.json
assets/models/: Thumbs.db
assets/scenes/: scene.json
assets/shaders/: blit.fs  blit.glsl  blit.vs  debug.glsl  default.fs  default.glsl  default.vs  default_shadow.fs  default_shadow.vs  default_shadowmap.fs  default_shadowmap.vs  example.glsl  render_depth.glsl  render_normals.glsl  scattering.glsl  scene.glsl  sky.glsl  terrain.fs  terrain.glsl  terrain.vs  unlit.glsl
src/: asset_loader.rs  attrib.rs  buffer.rs  camera.rs  context.rs  draw.rs  draw_state.rs  event.rs  frame.rs  glutil.rs  graphics.rs  input.rs  main.rs  material.rs  mesh.rs  player.rs  render_queue.rs  render_target.rs  sample_scene.rs  scene.rs  scene_data.rs  shader.rs  shadow_pass.rs  terrain.rs  texture.rs  window.rs
src/rendering/: attrib.rs  buffer.rs  context.rs  frame.rs  mesh.rs  mod.rs  pass.rs  sampler.rs  shader.rs  terrain.rs  texture.rs
src/rendering/shader/: cache.rs  gl_program.rs  grammar.rustpeg  keywords.rs  mod.rs  parser.rs
src/scene/: mod.rs  scene_renderer.rs
