[package]
name = "almagest"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]

[dependencies]
nalgebra = "*"
libc = "*"
log = "0.3.1"
fern = "0.3.5"
time = "*"
num = "*"
image = "*"
typed-arena = "*"
smallvec="*"
tobj="*"
serde = "*"
serde_json = "*"
serde_macros = "*"
bitflags = "0.3"
combine = "*"
peg = "*"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
#default-features = false

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

# The benchmarking profile, used for `cargo bench`
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
